[gd_scene load_steps=13 format=3 uid="uid://cy80qqtuujold"]

[ext_resource type="Script" path="res://Scenes/Main.gd" id="1_1unx3"]
[ext_resource type="Script" path="res://Scenes/Font Exporter.gd" id="2_os87d"]
[ext_resource type="Script" path="res://Scenes/AutosaveTimer.gd" id="3_7f2cx"]
[ext_resource type="Script" path="res://Scenes/UI/Zoom.gd" id="3_35jiy"]
[ext_resource type="Script" path="res://Scenes/Preferences.gd" id="3_feyia"]
[ext_resource type="Script" path="res://Scenes/UI/HelpWindow.gd" id="4_ovv60"]
[ext_resource type="Shader" path="res://Scenes/UI/SheetDataVisual.gdshader" id="5_lrs0x"]
[ext_resource type="Texture2D" uid="uid://dj7ugcaxhswdh" path="res://icon.svg" id="5_ow5ji"]
[ext_resource type="Script" path="res://Scenes/UI/SDVcontroller.gd" id="6_rtvr5"]
[ext_resource type="Script" path="res://Scenes/UI/FontNameChecker.gd" id="9_2cha7"]
[ext_resource type="Script" path="res://Scenes/UI/OutputPreview.gd" id="11_m7bvf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ntki1"]
shader = ExtResource("5_lrs0x")
shader_parameter/rows = 1
shader_parameter/columns = 1
shader_parameter/margins = Vector2(0, 0)
shader_parameter/sprite_size = Vector2(64, 64)

[node name="Main" type="Node2D"]
script = ExtResource("1_1unx3")

[node name="Font Exporter" type="Node" parent="."]
script = ExtResource("2_os87d")

[node name="AutosaveTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true
script = ExtResource("3_7f2cx")

[node name="OpenDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(512, 512)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg", "*.fnt")

[node name="ExportDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 2
size = Vector2i(512, 512)
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="PreferencesWindow" type="Window" parent="."]
title = "Preferences"
initial_position = 2
size = Vector2i(256, 128)
visible = false
script = ExtResource("3_feyia")

[node name="RichTextLabel" type="RichTextLabel" parent="PreferencesWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "
[center] Nothing here yet ! [/center]"
fit_content = true

[node name="OKButton" type="Button" parent="PreferencesWindow"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.5
offset_top = -31.0
offset_right = 42.5
grow_horizontal = 2
grow_vertical = 0
text = " okay i guess "

[node name="HelpWindow" type="Window" parent="."]
title = "Help"
initial_position = 2
size = Vector2i(256, 128)
visible = false
script = ExtResource("4_ovv60")

[node name="RichTextLabel" type="RichTextLabel" parent="HelpWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]
no clue
you're on your own
[/center]"

[node name="Button" type="Button" parent="HelpWindow"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.5
offset_top = -31.0
offset_right = 26.5
grow_horizontal = 2
grow_vertical = 0
text = " cool, "

[node name="ZoomHitbox" type="Control" parent="."]
custom_minimum_size = Vector2(768, 688)
layout_mode = 3
anchors_preset = 0
offset_left = 256.0
offset_top = 32.0
offset_right = 1024.0
offset_bottom = 720.0

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("5_ow5ji")

[node name="TexSplit" type="ColorRect" parent="CenterContainer/TextureRect"]
material = SubResource("ShaderMaterial_ntki1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_rtvr5")

[node name="Zoom" type="Camera2D" parent="CenterContainer"]
script = ExtResource("3_35jiy")

[node name="CooldownTimer" type="Timer" parent="CenterContainer/Zoom"]
wait_time = 0.05
one_shot = true

[node name="Bg" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="Bg"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.243137, 0.34902, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="UI" type="Control" parent="CanvasLayer"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Left Toolbar" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 23.0
offset_right = 256.0
grow_vertical = 2
color = Color(0.490196, 0.670588, 0.662745, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Left Toolbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 25.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Info" type="VBoxContainer" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info"]
layout_mode = 2
text = "Font Face"
horizontal_alignment = 1

[node name="FontName" type="TextEdit" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 34)
layout_mode = 2
placeholder_text = "Untitled Font"
context_menu_enabled = false
script = ExtResource("9_2cha7")

[node name="Empty Space" type="Control" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="FontSize" type="SpinBox" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
min_value = 1.0
max_value = 128.0
value = 1.0
alignment = 1
suffix = "px"
select_all_on_focus = true

[node name="Label" type="Label" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info/HBoxContainer/FontSize"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = -25.0
offset_right = 28.0
offset_bottom = -2.0
grow_horizontal = 2
text = "Font Size"

[node name="Line Spacing" type="SpinBox" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
min_value = 1.0
max_value = 3.0
step = 0.05
value = 1.0
alignment = 1
select_all_on_focus = true

[node name="Label" type="Label" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info/HBoxContainer/Line Spacing"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_top = -25.0
offset_right = 44.0
offset_bottom = -2.0
grow_horizontal = 2
text = "Line Spacing"

[node name="Also Header" type="Label" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer"]
layout_mode = 2
text = "
Sheet Data"
horizontal_alignment = 1

[node name="Character" type="VBoxContainer" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character"]
layout_mode = 2
text = "Rows & Columns:"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Rows" type="SpinBox" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character/HBoxContainer2" groups=["SheetData"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
min_value = 1.0
max_value = 64.0
value = 1.0
alignment = 3
prefix = "row"
suffix = " "
select_all_on_focus = true

[node name="Columns" type="SpinBox" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character/HBoxContainer2" groups=["SheetData"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
min_value = 1.0
max_value = 64.0
value = 1.0
alignment = 3
prefix = "col"
suffix = " "
select_all_on_focus = true

[node name="Label3" type="Label" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character"]
layout_mode = 2
text = "Margins:"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="MarginX" type="SpinBox" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character/HBoxContainer" groups=["SheetData"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
max_value = 64.0
alignment = 3
prefix = "x"
suffix = "px"
select_all_on_focus = true

[node name="MarginY" type="SpinBox" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character/HBoxContainer" groups=["SheetData"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
max_value = 64.0
alignment = 3
prefix = "y"
suffix = "px"
select_all_on_focus = true

[node name="Label" type="Label" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer"]
layout_mode = 2
text = "
Character Arrangement"
horizontal_alignment = 1

[node name="CharArrangement" type="TextEdit" parent="CanvasLayer/UI/Left Toolbar/VBoxContainer" groups=["SheetData"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 192)
layout_mode = 2
placeholder_text = "Input Character Data"

[node name="Version Label" type="Label" parent="CanvasLayer/UI/Left Toolbar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -31.0
offset_right = 44.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "SBFC v0.1.0"

[node name="Right Toolbar" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -328.0
offset_bottom = 360.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.490196, 0.670588, 0.662745, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Right Toolbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 16.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/Right Toolbar/VBoxContainer"]
layout_mode = 2
text = "Text Preview"
horizontal_alignment = 1

[node name="Input Preview" type="TextEdit" parent="CanvasLayer/UI/Right Toolbar/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
placeholder_text = "Input Preview Text"

[node name="Output Preview" type="TextEdit" parent="CanvasLayer/UI/Right Toolbar/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
placeholder_text = "Output Text"
editable = false
script = ExtResource("11_m7bvf")

[node name="Control" type="Control" parent="CanvasLayer/UI/Right Toolbar/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/UI/Right Toolbar/VBoxContainer"]
layout_mode = 2
text = "Adjust Invidivual Chars"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/UI/Right Toolbar/VBoxContainer"]
custom_minimum_size = Vector2(0, 382)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="IndCharAdj" type="VBoxContainer" parent="CanvasLayer/UI/Right Toolbar/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/Right Toolbar/VBoxContainer/ScrollContainer/IndCharAdj"]
custom_minimum_size = Vector2(232, 0)
layout_mode = 2

[node name="AddICA Button" type="Button" parent="CanvasLayer/UI/Right Toolbar/VBoxContainer/ScrollContainer/IndCharAdj/CenterContainer"]
layout_mode = 2
text = "   Add SP Char Data   "

[node name="Ribbon" type="ColorRect" parent="CanvasLayer/UI"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0.560784, 0.768627, 0.741176, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/Ribbon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -3.0
offset_right = -16.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="OpenButton" type="Button" parent="CanvasLayer/UI/Ribbon/HBoxContainer"]
layout_mode = 2
text = "Open File"

[node name="ExportButton" type="Button" parent="CanvasLayer/UI/Ribbon/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Export Font"

[node name="PreferencesButton" type="Button" parent="CanvasLayer/UI/Ribbon/HBoxContainer"]
layout_mode = 2
text = "Preferences"

[node name="HelpButton" type="Button" parent="CanvasLayer/UI/Ribbon/HBoxContainer"]
layout_mode = 2
text = "Help"

[node name="ZoomLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -31.0
offset_right = 52.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Zoom -- 100%"

[node name="LoadedTexLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -552.0
offset_top = -32.0
offset_right = -264.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
text = "No Textures Loaded..."
horizontal_alignment = 2

[node name="Export Bar" type="CanvasLayer" parent="."]
layer = 3

[node name="ExportPanel" type="Panel" parent="Export Bar"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Export Bar/ExportPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 120.0
offset_bottom = 29.0
text = "Exporting \"%s\""

[node name="ProgressBar" type="ProgressBar" parent="Export Bar/ExportPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -33.0
offset_right = 112.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
step = 1.0

[connection signal="timeout" from="AutosaveTimer" to="AutosaveTimer" method="_on_timeout"]
[connection signal="confirmed" from="OpenDialog" to="." method="_on_open_dialog_confirmed"]
[connection signal="confirmed" from="OpenDialog" to="CenterContainer/TextureRect/TexSplit" method="_on_open_dialog_confirmed"]
[connection signal="confirmed" from="ExportDialog" to="Font Exporter" method="_on_export_dialog_confirmed"]
[connection signal="close_requested" from="PreferencesWindow" to="PreferencesWindow" method="_on_close_requested"]
[connection signal="button_up" from="PreferencesWindow/OKButton" to="PreferencesWindow" method="_on_ok_button_button_up"]
[connection signal="close_requested" from="HelpWindow" to="HelpWindow" method="_on_close_requested"]
[connection signal="button_up" from="HelpWindow/Button" to="HelpWindow" method="_on_button_button_up"]
[connection signal="text_changed" from="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info/FontName" to="CanvasLayer/UI/Left Toolbar/VBoxContainer/Info/FontName" method="_on_text_changed"]
[connection signal="value_changed" from="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character/HBoxContainer2/Rows" to="CenterContainer/TextureRect/TexSplit" method="_on_rows_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character/HBoxContainer2/Columns" to="CenterContainer/TextureRect/TexSplit" method="_on_columns_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character/HBoxContainer/MarginX" to="CenterContainer/TextureRect/TexSplit" method="_on_margin_x_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UI/Left Toolbar/VBoxContainer/Character/HBoxContainer/MarginY" to="CenterContainer/TextureRect/TexSplit" method="_on_margin_y_value_changed"]
[connection signal="button_up" from="CanvasLayer/UI/Right Toolbar/VBoxContainer/ScrollContainer/IndCharAdj/CenterContainer/AddICA Button" to="." method="_on_add_ica_button_button_up"]
[connection signal="button_up" from="CanvasLayer/UI/Ribbon/HBoxContainer/OpenButton" to="." method="_on_open_button_button_up"]
[connection signal="button_up" from="CanvasLayer/UI/Ribbon/HBoxContainer/ExportButton" to="Font Exporter" method="_on_export_button_button_up"]
[connection signal="button_up" from="CanvasLayer/UI/Ribbon/HBoxContainer/PreferencesButton" to="PreferencesWindow" method="_on_preferences_button_button_up"]
[connection signal="button_up" from="CanvasLayer/UI/Ribbon/HBoxContainer/HelpButton" to="HelpWindow" method="_on_help_button_button_up"]
